# bookstore

./: .env.production  .flake8  .gitignore  AUTHENTICATION.md  DEPLOY_PYTHONANYWHERE.md  Dockerfile  Makefile  NOTAS.md  README.md  db.sqlite3  docker-compose.yml  env.dev  manage.py  manual_test_authentication.py  pyproject.toml  requirements.txt
.github/: build.yml
.github/workflows/: build.yml  github-actions-demo.yml  workflow-pr.yml
api/: views.py
bookstore/: asgi.py  settings.py  urls.py  wsgi.py
order/: __init__.py  factories.py  models.py  urls.py
order/migrations/: 0001_initial.py  __init__.py
order/serializers/: order_serializer.py
order/tests/: __init__.py  test_order_model.py  test_order_serializer.py  test_order_viewsets.py
order/tests/test_serializers/: test_order_serializer.py
order/viewsets/: __init__.py  order_viewset.py  order_viewsets.py
product/: __init__.py  factories.py  tests.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_name_product_title_category_description_and_more.py  0003_alter_category_options_alter_product_options_and_more.py  __init__.py
product/models/: __init__.py  category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: __init__.py  test_category_model.py  test_category_serializer.py  test_category_viewsets.py  test_product_model.py  test_product_serializer.py  test_product_viewsets.py
product/viewsets/: __init__.py  category_viewset.py  category_viewsets.py  product_viewset.py  product_viewsets.py
(+5 files in other folders)
